[package]
name = "data_link_lis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.1"
termios = "0.2.2"
ioctl-rs = "0.1.5"
serialport = "4.2.2"  # Add the version of the serialport crate here
clap = { version = "3.1.6", features = ["derive"] }
rust_gpiozero = "^0.2"
rppal = "0.11.2"
embedded-graphics = "0.6.0"
linux-embedded-hal = "0.3.0"

[dev-dependencies]
assert_hex = "0.2.2"
